--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -139,6 +139,13 @@
   color: white;
 }
 
+.account-dropdown-button {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+}
+
 .pinning-header .account-dropdown-button .caret {
   border-color: #fff transparent transparent;
   border-style: solid;
@@ -148,10 +155,10 @@
   transition: transform 367ms cubic-bezier(0.21, 0, 0.07, 1);
   width: 0;
   cursor: pointer;
-  transform-origin: 50% 25%; /* 화살표의 꼭대기 부분을 기준으로 설정 */
 }
 
-.pinning-header .account-dropdown-button .caret:hover {
+/* 호버했을 때 open */
+.account-dropdown-button .caret.open {
   transform: rotate(180deg);
 }
 
@@ -160,4 +167,11 @@
   font-size: 12px;
   position: relative;
   z-index: 0;
+}
+
+.profile-icon {
+  border-radius: 4px;
+  height: 32px;
+  vertical-align: middle;
+  width: 32px;
 }
